@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 aea1721725f0709f13299ebe579a11aee4255faf ChangeLog
+SHA1 c96b75b6c01152ab02a71bf5b0190d461eb7056a ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 322a781ea3ce520ace4ef805de2752740e7fbebe META.yml
+SHA1 54101d13dfa713f7f27dd953eec311d7f6931fa2 META.yml
 SHA1 df0a7b0b185d75fea1493f413959a77e2571ade5 Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 45584047ab2539e4d02e6cc5488af33ffe39b1f8 lib/Term/Menus.pm
+SHA1 451959b84f10d2ec00b348f39506b3354c2afc66 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk07pPAACgkQdsVAdUjO9ImJygCfS3lf6rEi8hbLUOTJ7GsvrWXK
-660AniZ/WtX0AgK98yQpVy1Tw3RuuDgk
-=LoMZ
+iEYEARECAAYFAk08KGkACgkQdsVAdUjO9ImfdwCglFxGWp4/ncQ9NFUMJZWz026h
+P7MAn2PmGdN2XxG3V/mrTiF4hC24xLec
+=WaVy
 -----END PGP SIGNATURE-----
